--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -174,6 +174,7 @@ ext mobi, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 #-------------------------------------------
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
+mime ^image/gif, has viewnior,  X, flag f = viewnior -- "$@"
 
 mime ^image, has imv,       X, flag f = imv -- "$@"
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
